# outlier-generator-models

./: README.md  main.py  pyproject.toml
notebooks/: test_outliers.ipynb
src/: outlier_generator.py  prepare_dataset.py  read_dataset.py
